modified:   dsygonline/src/config/ibatis/dsyg-mailauth.xml

--- a/dsygonline/src/config/config.properties
+++ b/dsygonline/src/config/config.properties
@@ -9,6 +9,8 @@ news_img_path=E\:\\image_tomcat\\webapps\\dsyg\\news\\
 language=c
 
 MAIL_HOST=smtp.163.com
-MAIL_AUTHEN_USER=aiqinbird@163.com
-MAIL_AUTHEN_PWD=Cccc3333
+#MAIL_AUTHEN_USER=aiqinbird@163.com
+#MAIL_AUTHEN_PWD=Cccc3333
+MAIL_AUTHEN_USER=koubaiblue@163.com
+MAIL_AUTHEN_PWD=Aaaa1111
 ATTACHMENT_PATH=d\:\\
