modified:   dsygonline/src/com/cn/dsyg/action/CustomerAction.java 	modified:   dsygonline/src/config/config.properties

--- a/dsygonline/src/config/config.properties
+++ b/dsygonline/src/config/config.properties
@@ -8,6 +8,7 @@ news_img_path=E\:\\image_tomcat\\webapps\\dsyg\\news\\
 #language,c=chinese,j=japanese,e=english
 language=c
 
+HOST_INFO=http://localhost:8080
 MAIL_HOST=smtp.163.com
 #MAIL_AUTHEN_USER=aiqinbird@163.com
 #MAIL_AUTHEN_PWD=Cccc3333
