modified:   dsygonline/WebRoot/page/order/orderdetail.jsp 	modified:   dsygonline/WebRoot/page/product/productlist.jsp 	modified:   dsygonline/WebRoot/page/shoppingcart/shoppingcartlist.jsp 	modified:   dsygonline/src/com/cn/common/mail/MailSender.java 	modified:   dsygonline/src/config/config.properties

--- a/dsygonline/src/config/config.properties
+++ b/dsygonline/src/config/config.properties
@@ -10,6 +10,8 @@ language=c
 
 HOST_INFO=http://localhost:8080
 MAIL_HOST=smtp.163.com
-MAIL_AUTHEN_USER=aiqinbird@163.com
-MAIL_AUTHEN_PWD=Cccc3333
+MAIL_AUTHEN_USER=koubai55bird@163.com
+MAIL_AUTHEN_PWD=Aaaa1111
 ATTACHMENT_PATH=d\:\\
+
+MAIL_FLG=
